cmake_minimum_required(VERSION 3.5.0)
project(SDL3canvas VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 17)
set(SOURCES include/defines.hpp src/utils.cpp src/base.cpp)
add_library(${PROJECT_NAME} ${SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ SDL3::SDL3 SDL3imgui)
target_link_libraries(${PROJECT_NAME} PUBLIC SDL3::SDL3 SDL3imgui glm::glm)
